# nolanlab-dlc

./: README.md  pose_estimation.py  pose_estimation_on_eddie.py  pyproject.toml
wolf_crops/: tongue_crops_wolf.csv
