[project]
name = "nolanlab-dlc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deeplabcut[gui]>=3.0.0",
    "eddie-helper",
    "matplotlib==3.8.3",
    "pandas>=2.3.3",
    "tables>=3.10.2",
]

[build-system]
requires = ["setuptools>=78.0.2"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
eddie-helper = { git = "https://github.com/chrishalcrow/eddie_helper.git" }
